<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lockr</string>
    <string name="lock_list">Your Locks</string>
    <string name="title_section2">Keys</string>
    <string name="title_section3">Weekly Usage</string>
    <string name="title_section4">Monthly Usage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="lock_setup">Set Up Your Lockr</string>
    <string name="setup_id">Enter Lock ID</string>
    <string name="setup_name">Give your lock a name</string>
    <string name="need_account">Need an account? Register here</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pi_setup">Pi Setup</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_control">ControlActivity</string>
</resources>