<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bakedgoodsltd.lockr.LoginActivity"
    android:background="@color/main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/lockr_logo" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:background="@color/accent"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:paddingLeft="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_account"
        android:id="@+id/buttonText"
        android:textColor="@color/lightgray"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
