<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bakedgoodsltd.lockr.PiSetupActivity"
    android:background="@color/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lock_setup"
        android:id="@+id/PiSetUpTitle"
        android:layout_alignRight="@+id/lockNameTxt"
        android:layout_alignLeft="@+id/lockNameTxt"
        android:textSize="24sp"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lockNameTxt"
        android:visibility="visible"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/PiSetUpTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/setup_name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:paddingLeft="8dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lockId"
        android:visibility="visible"
        android:layout_below="@+id/PiSetUpTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/setup_id"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:paddingLeft="8dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/PiSet"
        android:onClick="onSetClicked"
        android:layout_alignBottom="@+id/lockNameTxt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/accent"
        android:textColor="@android:color/white" />


</LinearLayout>
